--- a/src/app/parts/main_menu/template.pug
+++ b/src/app/parts/main_menu/template.pug
@@ -1,4 +1,4 @@
-ul.nav
+//ul.nav
     li.home
         a(routerLink="/") 
             img(src='{{ bulbicon | cd:"h_80,c_fill"}}')
@@ -10,3 +10,27 @@ ul.nav
         a(href="http://jobportal.ecestudents.com") Job Portal    
     li
         a(href="http://events.ecestudents.com") Events
+        
+
+<div class="togglewrap" data-responsive-toggle="example-menu" data-hide-for="medium">
+    div(data-toggle="example-menu")#toggle
+      <button class="menu-icon" type="button"></button>
+      <div class="title-bar-title">Menu</div>
+</div>
+
+<div class="" id="example-menu" >
+  ul.nav
+    li.home
+        a(routerLink="/") 
+            img(src='{{ bulbicon | cd:"h_80,c_fill"}}')
+    li.hometxt
+        a(routerLink="/") Home
+    //li(*ngFor="let link of menu")
+        a(routerLink="/{{ link.path }}") {{link.label}}
+    li
+        a(routerLink="/ic") Innovation Challenge
+    li
+        a(href="http://jobportal.ecestudents.com") Job Portal    
+    li
+        a(href="http://events.ecestudents.com") Events
+</div>
