--- a/src/main.scss
+++ b/src/main.scss
@@ -88,7 +88,9 @@ $fa-sass-asset-helper: false;
 body {
     font-size: ms(0);
     color:$ece-black;
-    min-width:600px;
+    @include bp(medium){
+      min-width:600px; 
+    }
 }
 
 ::selection {
