--- a/src/app/parts/main_menu/template.pug
+++ b/src/app/parts/main_menu/template.pug
@@ -12,13 +12,12 @@
         a(href="http://events.ecestudents.com") Events
         
 
-<div class="togglewrap" data-responsive-toggle="example-menu" data-hide-for="medium">
+.togglewrap(data-responsive-toggle="example-menu", data-hide-for="medium")
     div(data-toggle="example-menu")#toggle
-      <button class="menu-icon" type="button"></button>
-      <div class="title-bar-title">Menu</div>
-</div>
+        button(class="menu-icon", type="button")
+        .title-bar-title Menu
 
-<div class="" id="example-menu" >
+#example-menu
   ul.nav
     li.home
         a(routerLink="/") 
@@ -33,4 +32,3 @@
         a(href="http://jobportal.ecestudents.com") Job Portal    
     li
         a(href="http://events.ecestudents.com") Events
-</div>
