--- a/src/app/parts/footer/style.scss
+++ b/src/app/parts/footer/style.scss
@@ -64,6 +64,7 @@
     grid-template: "contact" auto "title" auto "social" auto;
     grid-gap: ms(-6);
     align-items: center;
+    margin: ms(0);
 
 
     @include bp(medium) {
@@ -76,10 +77,10 @@
             font-size: ms(1);
             @include bp(small) {
                 font-size: ms(2);
-                margin: 0 ms(5);
+            margin: 0 ms(5);
             }
 
-            margin-bottom:ms(1);
+            margin-bottom: ms(1);
         }
 
     .social {
@@ -109,19 +110,19 @@
                     font-size: ms(1);
                 }
                 .fb {
-                    @include fa-link(facebook, ms(3), $ece-black);
+                    @include fa-link(facebook, ms(2.5), $ece-black);
                 }
 
                 .ln {
-                    @include fa-link(linkedin, ms(3), $ece-black);
+                    @include fa-link(linkedin, ms(2.5), $ece-black);
                 }
 
                 .twit {
-                    @include fa-link(twitter, ms(3), $ece-black);
+                    @include fa-link(twitter, ms(2.5), $ece-black);
                 }
 
                 .insta {
-                    @include fa-link(instagram, ms(3), $ece-black);
+                    @include fa-link(instagram, ms(2.5), $ece-black);
                 }
             }
         }
