--- a/src/app/pages/ic/style.scss
+++ b/src/app/pages/ic/style.scss
@@ -1,11 +1,12 @@
 @import 'mixins';
 
-a, p {
+a,
+p {
     font-size: ms(1);
 }
 
 :host /deep/ .nav {
-    a{
+    a {
         font-size: ms(1);
     }
 }
@@ -26,36 +27,26 @@ a, p {
 }
 
 .marketing-site-hero {
-    background: cd("pages/ic/DSC_0385_3.jpg", "w_1920,c_fill") 30% 80% no-repeat;
-    height: 90vh;
-
-    display: flex;
-    align-items: center;
-
+    background: cd("pages/ic/DSC_0385_3.jpg", "w_1920,c_fill") top left no-repeat;
     @include bp(medium) {
-        background-position: 50% 40%;
         margin-top: -$nav-height;
+        padding: $nav-height 0;
     }
 }
 
 .marketing-site-hero-content {
-    align-items: center;
+    text-align: center;
     display: grid;
     margin: 0 auto;
     padding-left: 5%;
     padding-right: 5%;
     font-family: museosans;
 
-    @media screen and (min-width: 40em) {
-        padding-left: 40%;
-    }
-
     h1 {
         color: $ece-orange;
         font-weight: 300;
         font-size: ms(2);
-        text-align: right;
-        margin: 10vh 0 0 0;
+        margin: ms(0) 0 0 0;
 
 
         &.subheader {
@@ -101,26 +92,16 @@ a, p {
     }
 }
 
-.panel-about {
-    width: 100%;
+.content {
     display: grid;
-    padding: ms(2) ms(1);
-    align-items: center;
-    grid-template-areas: "left" "right";
-      grid-template-rows: auto auto;
+    margin: ms(0);
 
-      img {
-            max-width: 50%;
-      }
-    
-          @include bp(medium) {
-            padding: ms(4) 0;
-            grid-template-areas: ". left . right .";
-            grid-template-columns: ms(5) 1fr ms(4) 2fr ms(5);
-            img {
-                  max-width: 100%;
-            }
-      }
+    img {
+        max-width: 50%;
+        display: block;
+        margin: auto;
+    }
+
 
     h3 {
         font-family: MuseoSans;
@@ -135,69 +116,22 @@ a, p {
         font-weight: 300;
     }
 
-    .left {
-        grid-area: left;
-        text-align: center;
-    }
-
-    .right {
-        grid-area: right;
-
-        .blue {
-            color: $ece-blue;
-            font-size: ms(1);
-            margin-right: ms(2);
-        }
-    }
-}
-
-.panel-svm {
-    width: 100%;
-    display: grid;
-    padding: ms(2) ms(1);
-    align-items: center;
-    grid-template-areas: "title" "left" "right";
-    grid-template-rows: auto auto auto;
-    
-    @include bp(medium) {
-            padding: ms(4) 0;
-            grid-template-areas: ". title title title ." ". left . right .";
-            grid-template-columns: ms(5) 1fr ms(4) 2fr ms(5);
-            grid-template-rows: auto auto;
-            img {
-                  max-width: 100%;
-            }
-      }
-
-    .title {
-        grid-area: title;
-        color: $ece-orange;
-        font-family: MuseoSans;
+    span {
+        color: $ece-blue;
         font-size: ms(1);
     }
-    .left {
-        margin: ms(1) 0;
-        text-align: center;
-        grid-area: left;
+
+    @include bp(medium) {
+        grid-template-columns: 1fr 2.5fr;
+        grid-row-gap: ms(1);
+        img {
+            max-width: 70%;
+            margin-top: ms(3);
+        }
     }
 
-    .right {
-        grid-area: right;
-        margin: ms(1) 0;
-        font-family: Aleo;
-        color: $ece-black;
-        font-weight: 300;
+    @include bp(xxlarge) {
+        margin: ms(1) ms(6);
     }
-}
 
-@include bp(medium) {
-    p {
-        font-size: ms(0.5);
-    }
-}
-
-@include bp(xxlarge) {
-    p {
-        font-size: ms(.8);
-    }
 }
