disabled for you button

--- a/src/app/pages/homepage/style.scss
+++ b/src/app/pages/homepage/style.scss
@@ -184,6 +184,10 @@
             margin-top: 60vh;
             text-decoration: none;
       }
+      
+      .foryou {
+            pointer-events: none;
+      }
 
       .container-fluid {
             height: 300px;
