--- a/src/app/pages/homepage/template.pug
+++ b/src/app/pages/homepage/template.pug
@@ -5,9 +5,10 @@
 .shaping  
    
     .red
-        button For You
-            div.icpop
-                div Job Portal
+        button.foryou For You
+            //div.icpop
+                div 
+                    a Job Portal
                 div Steep
                 div About Us
     .white 
