changed mobile menu font color

--- a/src/app/parts/main_menu/style.scss
+++ b/src/app/parts/main_menu/style.scss
@@ -53,7 +53,7 @@
         background: transparentize(white, 0.3);
         border-bottom: 1px solid $ece-black;
         a {
-            color: white;
+            color: $ece-black;
         }
     }
 
