--- a/src/app/pages/homepage/template.pug
+++ b/src/app/pages/homepage/template.pug
@@ -14,7 +14,7 @@
     .white 
         app-main-menu
         img.logo(src='{{ logo | cd:"w_350,c_fill" }}')
-        h1 Shaping Ideas
+        h1 Shaping ideas
         img.bulb(src='{{ bulb | cd:"w_130,c_fill" }}')
     .blue
         p 
@@ -31,7 +31,7 @@
             | ERASMUS
             br
             | CENTRE FOR 
-            br
+            br 
             | ENTREPRENEURSHIP
         h2 Students
     .right
