--- a/src/app/parts/footer/template.pug
+++ b/src/app/parts/footer/template.pug
@@ -9,7 +9,7 @@
             br 
             | Or you have a super crazy idea to share.
             
-        div Just drop by our office. 
+        div Just drop by our office. jo 
         
         div We have coffee. 
     .dates 
