--- a/src/app/pages/homepage/template.pug
+++ b/src/app/pages/homepage/template.pug
@@ -1,7 +1,8 @@
 //put the menu somewhere in the page
 //app-main-menu
 #construction
-    | Website under construction. Innovation under way. 
+    | Website under construction. Innovation under way.
+
 .shaping  
    
     .red
@@ -51,6 +52,10 @@
 #commingsoon.container-fluid
     h1 More content is coming soon
     h2 Keep visiting our site to find out about our amazing projects
+    
+#containtest    
+    #wrappertest
+        p test
 
 #partners.container-fluid
     h1 Our Partners
