--- a/src/app/pages/homepage/style.scss
+++ b/src/app/pages/homepage/style.scss
@@ -1,5 +1,18 @@
 @import 'mixins';
 
+#wrappertest {
+      @include wrapper;
+}
+
+#containtest {
+      @include background_container("pages/front/station.jpg");
+      @include margin_vertical;
+      @include padding_vertical;
+      p {
+            @include text(MuseoSans, 1, $ic-blue, 800);
+      }
+}
+
 #construction {
       width: 100%;
       text-align: center;
