some menu structure

--- a/src/app/parts/main_menu/style.scss
+++ b/src/app/parts/main_menu/style.scss
@@ -1,119 +1,8 @@
 @import 'mixins';
 
-
-@include foundation-responsive-embed;
-@include foundation-menu;
-@include foundation-menu-icon;
-
-:host {
-    width: 100%;
-}
-
-.togglewrap {
-    width: 100%;
-    background: white;
-    padding: ms(-2);
-    #toggle {
-        text-align: center;
-        width: 50%;
-        margin: 0 auto;
-        padding: ms(-2);
-        border: 3px solid $ece-orange;
-
-        .title-bar-title {
-            display: inline;
-            font-size: ms(1);
-            line-height: ms(1);
-        }
-
-        .menu-icon {
-            height: ms(1);
-            width: ms(1);
-            &:after {
-                background: $ece-orange;
-                height: 3px;
-                box-shadow: 0 8px 0 $ece-orange, 0 16px 0 $ece-orange;
-            }
-        }
-    }
-}
-
-#example-menu {
-    //width: 100%;
-    .hometxt {
-        display: block;
-    }
-    .home {
-        display: none;
-    }
-
-    li {
-        width: 100%;
-        text-align: center;
-        background: transparentize(white, 0.3);
-        border-bottom: 1px solid $ece-black;
-        a {
-            color: $ece-black;
-        }
-
-    }
-
-    @include bp(medium) {
-        position: relative;
-
-        .hometxt {
-            display: none;
-        }
-        .home {
-            display: block;
-        }
-
-        li {
-            width: auto;
-            background: none;
-            border: 0px;
-            text-align: left;
-
-            a {
-                color: white;
-            }
-        }
-    }
-}
-
-
-
-ul {
-    @include menu_base;
-
-    @include bp(medium) {
-
-        padding: 0 ms(1);
-
-        a {
-            font-family: MuseoSans;
-            font-weight: 500;
-            font-size: ms(.6);
-            transition: all 0.3s ease;
-            &:hover {
-                color: lighten($ece-black, 20)!important;
-            }
-        }
-
-        li.home {
-            margin: 0;
-            a {
-                padding: 0 ms(1) 0 0 !important;
-            }
-
-            img {
-                height: $nav-icon-height;
-                width: auto;
-            }
-        }
-    }
-
-    @include bp(large) {
-        padding: 0 ms(3);
+#main {
+    .main {
+        @include menu-base;
+        @include menu-direction("vertical");
     }
 }
