--- a/src/app/parts/main_menu/template.pug
+++ b/src/app/parts/main_menu/template.pug
@@ -1,34 +1,10 @@
-//ul.nav
-    li.home
-        a(routerLink="/")
-            img(src='{{ bulbicon | cd:"h_80,c_fill"}}')
-    //li(*ngFor="let link of menu")
-        a(routerLink="/{{ link.path }}") {{link.label}}
-    li
-        a(routerLink="/ic") Innovation Challenge
-    li
-        a(href="http://jobportal.ecestudents.com") Job Portal
-    li
-        a(href="http://events.ecestudents.com") Events
 
-
-.togglewrap(data-responsive-toggle="example-menu", data-hide-for="medium")
+//.togglewrap(data-responsive-toggle="example-menu", data-hide-for="medium")
     div(data-toggle="example-menu")#toggle
         button(class="menu-icon", type="button") ho
         .title-bar-title Menu
 
-#example-menu
-  ul.nav
-    li.home
-        a(routerLink="/")
-            img(src='{{ bulbicon | cd:"h_80,c_fill"}}')
-    li.hometxt
-        a(routerLink="/") Home
-    //li(*ngFor="let link of menu")
-        a(routerLink="/{{ link.path }}") {{link.label}}
-    li
-        a(routerLink="/ic") Innovation Challenge
-    //li
-        a(href="http://jobportal.ecestudents.com") Job Portal
-    li
-        a(href="http://events.ecestudents.com") Events
+#menu
+    ul(class="main")
+        li(*ngFor="let item of menu")
+            a(routerLink="{{item.path}}") {{item.label}}
