--- a/src/app/parts/main_menu/template.pug
+++ b/src/app/parts/main_menu/template.pug
@@ -5,6 +5,10 @@
         .title-bar-title Menu
 
 #menu
-    ul(class="main")
+    ul.main
         li(*ngFor="let item of menu")
             a(routerLink="{{item.path}}") {{item.label}}
+
+            ul(class="child", *ngIf="item.children")
+                li(*ngFor="let child of item.children")
+                    a(routerLink="{{child.path}}") {{child.label}}
