--- a/src/app/pages/homepage/style.scss
+++ b/src/app/pages/homepage/style.scss
@@ -40,6 +40,7 @@
       li {
             padding: 0;
             a {
+                  color: black !important;
                   font-size: ms(1) !important;
                   padding: ms(-1) ms(1) !important;
                   transition: all 0.3s ease;
