--- a/src/app/parts/main_menu/template.pug
+++ b/src/app/parts/main_menu/template.pug
@@ -1,14 +1,13 @@
+nav
+    .togglewrap(data-responsive-toggle="menu", data-hide-for="medium")
+        button(data-toggle="menu", class="menu-icon", type="button")#toggle
+        img(src="{{ 'parts/menu/logo_text' | cd:'h_80' }}")
 
-//.togglewrap(data-responsive-toggle="example-menu", data-hide-for="medium")
-    div(data-toggle="example-menu")#toggle
-        button(class="menu-icon", type="button") ho
-        .title-bar-title Menu
+    #menu
+        ul.main
+            li(*ngFor="let item of menu")
+                a(routerLink="{{item.path}}") {{item.label}}
 
-#menu
-    ul.main
-        li(*ngFor="let item of menu")
-            a(routerLink="{{item.path}}") {{item.label}}
-
-            ul(class="child", *ngIf="item.children")
-                li(*ngFor="let child of item.children")
-                    a(routerLink="{{child.path}}") {{child.label}}
+                ul(class="child", *ngIf="item.children")
+                    li(*ngFor="let child of item.children")
+                        a(routerLink="{{child.path}}") {{child.label}}
