--- a/src/app/parts/main_menu/style.scss
+++ b/src/app/parts/main_menu/style.scss
@@ -38,6 +38,7 @@ nav {
     }
 
     #menu {
+        
         &.toggled {
             display: none;
         }
@@ -45,23 +46,70 @@ nav {
         ul {
             @include menu-base;
             @include menu-direction("vertical");
+            
+            &.main{
+                align-items: center;
+                justify-content: center;
+            }
 
             &.child {
                 @include menu-nested;
+                @include bp(medium) {
+                    margin-left: 0;
+                }
             }
-        }
-
-        a {
-            color: $ece-black;
         }
 
         @include bp(medium) {
             &.toggled {
-                display: block;
+                display: flex;
             }
             ul.main {
                 @include menu-direction("horizontal"); // @include dropdown-menu-direction;
             }
         }
+    }
+}
+ @include bp(medium) {
+    .dropbtn {
+        color: $ece-orange;
+        font-weight: 600;
+        padding: 16px;
+        font-size: 19px;
+        border: none;
+        cursor: pointer;
+        -webkit-transition: all 0.3s ease;; /* Safari */
+        transition: all 0.3s ease;;
+    }
+    
+    .dropdown {
+        position: relative;
+        display: inline-block;
+    }
+    
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+    }
+    
+    .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+    
+    .dropdown-content a:hover {background-color: #f1f1f1}
+    
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
+    
+    .dropdown:hover .dropbtn {
+        color: $ece-black;
     }
 }
