--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -7,6 +7,7 @@
 @import 'style_imports/breakpoints';
 @import 'style_imports/font_awesome';
 @import 'style_imports/cloudinary';
+@import 'style_imports/events';
 //@import 'style_imports/standarization';
 
 //settings
